screen bleed and links fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -59,18 +59,25 @@
   margin: 0;
 }
 
-html {
-  scroll-behavior: smooth;
-}
 
-body {
+html,body{
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+    font-family: var(--body-font);
+  font-size: var(--normal-font-size);
+  background-color: var(--body-color);
+  color: var(--text-color);
+  transition: .3s;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
   color: var(--text-color);
   transition: .3s;
-  /* For animation dark mode */
 }
+
 
 h1,
 h2,
